<resources>

    <!--Page Titles-->

    <string name="title_fav">Favorites</string>
    <string name="title_explore">Explore</string>
    <string name="title_search">Search</string>


    <!--Favorites-->

    <string name="favorites_maps_divider_text">Maps</string>
    <string name="favorites_area_divider_text">Areas</string>
    <string name="favorites_remove_alert_title">Remove Favorite?</string>
    <string name="favorites_remove_alert_positive">OK</string>
    <string name="favorites_remove_alert_negative">Cancel</string>


    <!--Explore-->

    <string name="menu_region_americas">Americas</string>
    <string name="menu_region_europe">Europe</string>
    <string name="menu_region_asia">Asia</string>
    <string name="menu_region_oceania">Oceania</string>
    <string-array name="base_regions">
        <item>@string/menu_region_americas</item>
        <item>@string/menu_region_europe</item>
        <item>@string/menu_region_asia</item>
        <item>@string/menu_region_oceania</item>
    </string-array>
    <string name="switch_region_text">Switch</string>


    <!--Region/Area Items-->

    <string name="map_count">Maps: %1$d</string>


    <!--Area View-->

    <string name="area_lift_count_text">Lifts: %1$d</string>
    <string name="area_run_count_text">Runs: %1$d</string>
    <string name="area_opening_year_text">Opening Year: %1$d</string>
    <string name="area_website_text">Website: %1$s</string>
    <string name="area_regions_text">Regions: %1$s</string>
    <string name="area_info_card_title">Info</string>
    <string name="area_most_recent_map">\u0020• Most Recent</string>


    <!--Map Item / Map View-->

    <string name="map_view_year_placeholder">Year</string>
    <string name="map_view_area_placeholder">Area Name</string>
    <string name="map_view_share">Share</string>
    <string name="map_view_share_sheet_title">Share map: </string>
    <string name="map_view_download">Download to Gallery</string>
    <string name="map_view_download_popup">Download</string>
    <string name="map_view_share_wip">Sharing isn\'t available yet, stay tuned</string>


    <!--Offline-->

    <string name="offline_error_title">Offline</string>
    <string name="offline_error_desc">Any areas, regions, or maps you\'ve viewed will be available offline</string>
    <string name="offline_error_refresh">Refresh</string>
    <string name="downloading_notification_title">Downloading Map: %1$s %2$d</string>

    <!--Empty-->
    <string name="empty_favorites_title">No Favorites Yet</string>
    <string name="empty_favorites_summary">Press the heart icon next to maps and areas to favorite them for easy access</string>
    <string name="empty_search_title">No Results</string>
    <string name="empty_search_summary">Search another term, or go to SkiMap.org to add a missing area</string>
    <string name="empty_search_action">Add Area</string>
    <string name="empty_area_title">No Maps</string>
    <string name="empty_area_summary">Try another area, or go to SkiMap.org to add missing maps if you have them</string>
    <string name="empty_area_action">Add Map</string>


    <!--Settings-->

    <string name="settings_title">Settings</string>
    <string name="settings_starting_region">Starting Region</string>
    <string-array name="settings_sort_options">
        <item>Alphabetical</item>
        <item>Map Count</item>
    </string-array>
    <string name="settings_sort_regions">Sort Regions</string>
    <string name="settings_sort_areas">Sort Areas</string>
    <string name="settings_theme_night_mode_title">Dark Mode</string>
    <string-array name="settings_theme_night_mode_options">
        <item>Light</item>
        <item>Dark</item>
        <item>Follow Battery Saver</item>
        <item>Follow System</item>
        <item>Time-Based</item>
    </string-array>
    <string name="settings_about">About</string>
    <string name="settings_about_version">Version</string>
    <string name="settings_about_licenses">Licenses</string>
    <string name="settings_powered_by">Powered by SkiMap.org</string>


</resources>
