<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <view
        android:id="@+id/pager"
        class="com.andb.apps.trails.NonSwipeViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:swipeable="false" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:elevation="8dp"
        app:itemIconTint="@drawable/bottom_icon_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation"
        app:tabIconTint="@drawable/bottom_icon_selector"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextColor="@color/iconDeselectedColor">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/favoritesTab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:text="@string/title_fav" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/exploreTab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:text="@string/title_explore" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/searchTab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_search_black_24dp"
            android:text="@string/title_search" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/mapViewHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>